<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="menu_label">My Nanodegree Apps!</string>
    <string name="popular_movies_label">Popular Movies</string>
    <string name="build_it_bigger_label">Build it bigger</string>
    <string name="stock_hawk_label">Stock Hawk</string>
    <string name="make_your_app_material_label">Make your app material</string>
    <string name="go_ubiquitous_label">Go ubiquitous</string>
    <string name="capstone_label">Capstone</string>
</resources>
