<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/menu_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_popular_movies"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies_label" />

    <Button
        android:id="@+id/bt_stock_hawk"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk_label" />

    <Button
        android:id="@+id/bt_build_it_bigger"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_label" />

    <Button
        android:id="@+id/bt_make_your_app_material"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material_label" />

    <Button
        android:id="@+id/bt_go_ubiquitous"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous_label" />

    <Button
        android:id="@+id/bt_capstone"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_label" />

</LinearLayout>
